--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "dist_win": "set WEBPACK_ENV=online&& node_modules/.bin/webpack -p"
   },
   "devDependencies": {
+    "antd": "^3.6.1",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-import": "^1.7.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.8",
